[package]
name = "actor_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
threaded_actor = { path = "../threaded_actor" }

syn = { version = "2.0", features = ["full"] }
quote = "1.0"
prettyplease = "0.2.15"

[dev-dependencies]
